<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box one</string>
    <string name="box_two">Box two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box four</string>
    <string name="box_five">Box five</string>
    <string name="how_to_play">Criativity is a game:</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>

    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
</resources>